force-app/main/default/objects/Asset/fields/DU_AccidentDamage__c.field-meta.xml
<CustomField>
    <fullName>DU_AccidentDamage__c</fullName>
    <description>CDM: Information whether accident damage has been detected</description>
    <inlineHelpText>Information whether an accident damage has been detected</inlineHelpText>
    <label>Accidental damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>