force-app/main/default/objects/Asset/fields/DU_AdaptiveCruiseControlExists__c.field-meta.xml
<CustomField>
    <fullName>DU_AdaptiveCruiseControlExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of adaptive cruise control</description>
    <inlineHelpText>Availability of adaptive cruise control</inlineHelpText>
    <label>Existence of Adaptive Cruise Control</label>
    <type>Checkbox</type>
</CustomField>