force-app/main/default/objects/Asset/fields/DU_AirConditioning__c.field-meta.xml
<CustomField>
    <fullName>DU_AirConditioning__c</fullName>
    <description>CDM: Specification of the air conditioning</description>
    <inlineHelpText>Specification of the air conditioning</inlineHelpText>
    <label>Air Conditioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>