force-app/main/default/objects/Asset/fields/DU_AirCushioning__c.field-meta.xml
<CustomField>
    <fullName>DU_AirCushioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of an air suspension</description>
    <inlineHelpText>Air Cushioning</inlineHelpText>
    <label>Air Cushioning</label>
    <type>Checkbox</type>
</CustomField>