force-app/main/default/objects/Asset/fields/DU_BodyworkType__c.field-meta.xml
<CustomField>
    <fullName>DU_BodyworkType__c</fullName>
    <description>CDM: Stores the body work type of the asset.</description>
    <inlineHelpText>Stores the body work type of the asset.</inlineHelpText>
    <label>BodyWork Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>