force-app/main/default/objects/Asset/fields/DU_BottomColorOriginal__c.field-meta.xml
<CustomField>
    <fullName>DU_BottomColorOriginal__c</fullName>
    <description>CDM: Stores the original bottom color.</description>
    <inlineHelpText>Stores information about the original bottom color</inlineHelpText>
    <label>Bottom color (original)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>