force-app/main/default/objects/Asset/fields/DU_CarLineKey__c.field-meta.xml
<CustomField>
    <fullName>DU_CarLineKey__c</fullName>
    <description>CDM: Field to store data for webCalc Car Line Key</description>
    <inlineHelpText>Stores the webCalc Car Line Key</inlineHelpText>
    <label>Car Line Key</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>