force-app/main/default/objects/Asset/fields/DU_CO2EmissionNEFZ__c.field-meta.xml
<CustomField>
    <fullName>DU_CO2EmissionNEFZ__c</fullName>
    <description>CDM: Stores the carbon dioxide emission in NEFZ.</description>
    <label>CO2 Emission NEFZ (g/KM)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>