force-app/main/default/objects/Asset/fields/DU_Color__c.field-meta.xml
<CustomField>
    <fullName>DU_Color__c</fullName>
    <description>CDM: Stores the color category.</description>
    <inlineHelpText>Stores the color category.</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Color</valueSetName>
    </valueSet>
</CustomField>