force-app/main/default/objects/Asset/fields/DU_ColorType__c.field-meta.xml
<CustomField>
    <fullName>DU_ColorType__c</fullName>
    <description>CDM: Stores the color type whether it is metallic or non-metallic.</description>
    <inlineHelpText>Stores the color type whether it is metallic or non-metallic.</inlineHelpText>
    <label>Color Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_ColorType</valueSetName>
    </valueSet>
</CustomField>