force-app/main/default/objects/Asset/fields/DU_ConstructionYear__c.field-meta.xml
<CustomField>
    <fullName>DU_ConstructionYear__c</fullName>
    <description>CDM: Stores the year of construction</description>
    <inlineHelpText>Stores the year of construction</inlineHelpText>
    <label>Construction Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>