force-app/main/default/objects/Asset/fields/DU_CountryBackend__c.field-meta.xml
<CustomField>
    <fullName>DU_CountryBackend__c</fullName>
    <description>CDM: Stores the value of the country code field to enable it for sharing.</description>
    <inlineHelpText>Stores the value of the country code field to enable it for sharing.</inlineHelpText>
    <label>Country Backend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>