force-app/main/default/objects/Asset/fields/DU_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>DU_CountryCode__c</fullName>
    <description>CDM: Country Code of the market the asset is related to. Based on a global value set.
Availability 1.6.0.5</description>
    <inlineHelpText>Country Code of the market the asset is related to. Based on a global value set.</inlineHelpText>
    <label>Country Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_CountryCode</valueSetName>
    </valueSet>
</CustomField>