force-app/main/default/objects/Asset/fields/DU_CouplingDevice__c.field-meta.xml
<CustomField>
    <fullName>DU_CouplingDevice__c</fullName>
    <description>CDM: Specification of the towbar</description>
    <inlineHelpText>Specification of the towbar</inlineHelpText>
    <label>Coupling Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>