force-app/main/default/objects/Asset/fields/DU_CruiseControlExists__c.field-meta.xml
<CustomField>
    <fullName>DU_CruiseControlExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of cruise control</description>
    <inlineHelpText>Availability of cruise control</inlineHelpText>
    <label>Existence of Cruise Control</label>
    <type>Checkbox</type>
</CustomField>