force-app/main/default/objects/Asset/fields/DU_CubicCapacity__c.field-meta.xml
<CustomField>
    <fullName>DU_CubicCapacity__c</fullName>
    <description>CDM: Cubic capacity</description>
    <inlineHelpText>Stores the Cubic capacity</inlineHelpText>
    <label>Cubic Capacity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>