force-app/main/default/objects/Asset/fields/DU_CurrentBookValue__c.field-meta.xml
<CustomField>
    <fullName>DU_CurrentBookValue__c</fullName>
    <description>CDM: Balance sheet residual book value after tax depreciation (straight-line depreciation over the normal useful life). (Accounting value)</description>
    <inlineHelpText>Balance sheet residual book value after tax depreciation (straight-line depreciation over the normal useful life). (Accounting value)</inlineHelpText>
    <label>Current Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>