force-app/main/default/objects/Asset/fields/DU_CurrentMileage__c.field-meta.xml
<CustomField>
    <fullName>DU_CurrentMileage__c</fullName>
    <description>CDM: Stores the recorded mileage of the asset.</description>
    <inlineHelpText>Stores the recorded mileage of the asset.</inlineHelpText>
    <label>Last Captured Mileage (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>