force-app/main/default/objects/Asset/fields/DU_CurrentMileageValueDate__c.field-meta.xml
<CustomField>
    <fullName>DU_CurrentMileageValueDate__c</fullName>
    <description>CDM: Date of last known mileage</description>
    <inlineHelpText>Date of last known mileage</inlineHelpText>
    <label>Value data of current mileage</label>
    <type>Date</type>
</CustomField>