force-app/main/default/objects/Asset/fields/DU_DamageAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageAmountTotal__c</fullName>
    <description>CDM: Amount of the last known expert-documented total damage to a vehicle</description>
    <inlineHelpText>Amount of the last known expert-documented total damage to a vehicle</inlineHelpText>
    <label>Total amount of damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>