force-app/main/default/objects/Asset/fields/DU_DamageAmountTotalValueDate__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageAmountTotalValueDate__c</fullName>
    <description>CDM: Date of last known expert-documented total damage</description>
    <inlineHelpText>Date of last known expert-documented total damage</inlineHelpText>
    <label>Value date of damage amount</label>
    <type>Date</type>
</CustomField>