force-app/main/default/objects/Asset/fields/DU_DateCurrentBookValue__c.field-meta.xml
<CustomField>
    <fullName>DU_DateCurrentBookValue__c</fullName>
    <description>CDM: Stores the last changed date of the bookvalue</description>
    <inlineHelpText>Stores the last changed date of the bookvalue</inlineHelpText>
    <label>Date of Current Book Value</label>
    <type>Date</type>
</CustomField>