force-app/main/default/objects/Asset/fields/DU_DelCountryCode__c.field-meta.xml
<CustomField>
    <fullName>DU_DelCountryCode__c</fullName>
    <description>CDM: Country of delivery</description>
    <inlineHelpText>Country of delivery</inlineHelpText>
    <label>Delivery Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_CountryCode</valueSetName>
    </valueSet>
</CustomField>