force-app/main/default/objects/Asset/fields/DU_DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DU_DeliveryDate__c</fullName>
    <description>CDM: The date when the car was delivered to the customer</description>
    <inlineHelpText>The date when the car was delivered to the customer</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>