force-app/main/default/objects/Asset/fields/DU_Drive__c.field-meta.xml
<CustomField>
    <fullName>DU_Drive__c</fullName>
    <description>CDM: Stores the value of which type of drive the asset is.</description>
    <inlineHelpText>Stores the value of which type of drive the asset is.</inlineHelpText>
    <label>Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Drive</valueSetName>
    </valueSet>
</CustomField>