force-app/main/default/objects/Asset/fields/DU_ElectricConsumption__c.field-meta.xml
<CustomField>
    <fullName>DU_ElectricConsumption__c</fullName>
    <description>CDM: Stores the value of the electrical consumption.</description>
    <inlineHelpText>Stores the value of the electrical consumption.</inlineHelpText>
    <label>Electric Consumption (kWh/100 KM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>