force-app/main/default/objects/Asset/fields/DU_ElectricRange__c.field-meta.xml
<CustomField>
    <fullName>DU_ElectricRange__c</fullName>
    <description>CDM: Stores the range in KM on full charge.</description>
    <inlineHelpText>Stores the range in KM on full charge.</inlineHelpText>
    <label>Electric Range (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>