force-app/main/default/objects/Asset/fields/DU_ElectricRangeWLTP__c.field-meta.xml
<CustomField>
    <fullName>DU_ElectricRangeWLTP__c</fullName>
    <description>CDM: Possible electric reach</description>
    <inlineHelpText>Possible electric range by WLTP</inlineHelpText>
    <label>Electric Range (WLTP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>