force-app/main/default/objects/Asset/fields/DU_FollowupWarrantyMileageKM__c.field-meta.xml
<CustomField>
    <fullName>DU_FollowupWarrantyMileageKM__c</fullName>
    <description>CDM: Specification of a follow-up warranty for mileage KM</description>
    <inlineHelpText>Specification of a follow-up warranty for mileage KM</inlineHelpText>
    <label>Follow-up Warranty for Mileage KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>