force-app/main/default/objects/Asset/fields/DU_FollowupWarrantyMileageMI__c.field-meta.xml
<CustomField>
    <fullName>DU_FollowupWarrantyMileageMI__c</fullName>
    <description>CDM: Specification of a follow-up warranty for mileage MI</description>
    <label>Follow-up Warranty for Mileage MI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>