force-app/main/default/objects/Asset/fields/DU_FuelConsCombWLTP__c.field-meta.xml
<CustomField>
    <fullName>DU_FuelConsCombWLTP__c</fullName>
    <description>CDM: Stores the fuel consumption in WLTP.</description>
    <label>Fuel Consumption WLTP (l/100 KM)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>