force-app/main/default/objects/Asset/fields/DU_FuelType__c.field-meta.xml
<CustomField>
    <fullName>DU_FuelType__c</fullName>
    <description>CDM: Field to capture the fuel type of a vehicle</description>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEL</fullName>
                <label>Fuel Cell</label>
            </value>
            <value>
                <fullName>DIE</fullName>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>ELE</fullName>
                <label>Electric</label>
            </value>
            <value>
                <fullName>HYB</fullName>
                <label>Hybrid Petrol</label>
            </value>
            <value>
                <fullName>HYD</fullName>
                <label>Hybrid Diesel</label>
            </value>
            <value>
                <fullName>LPG</fullName>
                <label>Liquified petroleum gas</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Not applicable</label>
            </value>
            <value>
                <fullName>NAG</fullName>
                <label>Natural Gas</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PET</fullName>
                <label>Petrol</label>
            </value>
            <value>
                <fullName>Gas</fullName>
                <isActive>false</isActive>
                <label>Gas</label>
            </value>
            <value>
                <fullName>Plug-in-hybrid</fullName>
                <isActive>false</isActive>
                <label>Plug-in-hybrid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>