force-app/main/default/objects/Asset/fields/DU_Headlights__c.field-meta.xml
<CustomField>
    <fullName>DU_Headlights__c</fullName>
    <description>CDM: Specification of the headlights</description>
    <label>Headlights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Xenon</fullName>
            </value>
            <value>
                <fullName>Led</fullName>
            </value>
            <value>
                <fullName>Halogen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>