force-app/main/default/objects/Asset/fields/DU_HeatedSeats__c.field-meta.xml
<CustomField>
    <fullName>DU_HeatedSeats__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of seat heating</description>
    <label>Heated Seats</label>
    <type>Checkbox</type>
</CustomField>