force-app/main/default/objects/Asset/fields/DU_Image__c.field-meta.xml
<CustomField>
    <fullName>DU_Image__c</fullName>
    <description>CDM: Formula field to display the image from the URL.</description>
    <formula>IMAGE(DU_URLImage__c,&apos;Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>