force-app/main/default/objects/Asset/fields/DU_ImageURL__c.field-meta.xml
<CustomField>
    <fullName>DU_ImageURL__c</fullName>
    <description>CDM: Stores the URL of the image.</description>
    <label>Image URL</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>