force-app/main/default/objects/Asset/fields/DU_ImpairedValueTotal__c.field-meta.xml
<CustomField>
    <fullName>DU_ImpairedValueTotal__c</fullName>
    <description>CDM: Total impaired value</description>
    <label>Total amount of impaired value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>