force-app/main/default/objects/Asset/fields/DU_InitialVehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>DU_InitialVehicleRegistration__c</fullName>
    <description>CDM: For new and used cars the first registration of the vehicle.</description>
    <label>Initial Vehicle Registration</label>
    <type>Date</type>
</CustomField>