force-app/main/default/objects/Asset/fields/DU_JatoID__c.field-meta.xml
<CustomField>
    <fullName>DU_JatoID__c</fullName>
    <description>CDM: Stores the JATO ID.</description>
    <label>Jato ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>