force-app/main/default/objects/Asset/fields/DU_LeatherSeats__c.field-meta.xml
<CustomField>
    <fullName>DU_LeatherSeats__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of leather or partial leather seats</description>
    <label>Leather Seats</label>
    <type>Checkbox</type>
</CustomField>