force-app/main/default/objects/Asset/fields/DU_ModelDescription__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelDescription__c</fullName>
    <description>CDM: Stores the detailed description of the model.</description>
    <label>Model Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>