force-app/main/default/objects/Asset/fields/DU_ModelGroup__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelGroup__c</fullName>
    <description>CDM: The model group is derived from the first three digits of the model key and roughly describes the vehicle category. (1H1 = Golf III)</description>
    <label>Model Group</label>
    <length>3</length>
    <type>Text</type>
</CustomField>