force-app/main/default/objects/Asset/fields/DU_ModelName__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelName__c</fullName>
    <description>CDM: Contains the name of the vehicle model</description>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>