force-app/main/default/objects/Asset/fields/DU_ModelPrice__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelPrice__c</fullName>
    <description>CDM: Stores the price of the model.</description>
    <label>Net Model List Price (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>