force-app/main/default/objects/Asset/fields/DU_NavigationSystemExists__c.field-meta.xml
<CustomField>
    <fullName>DU_NavigationSystemExists__c</fullName>
    <description>CDM: Availability of a navigation system</description>
    <label>Existence of Navigation System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>