force-app/main/default/objects/Asset/fields/DU_NumberOfCarDoors__c.field-meta.xml
<CustomField>
    <fullName>DU_NumberOfCarDoors__c</fullName>
    <description>CDM: Stores the number of car doors on the vehicle.</description>
    <label>Number of car doors</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>