force-app/main/default/objects/Asset/fields/DU_OptionalEquipmentSummary__c.field-meta.xml
<CustomField>
    <fullName>DU_OptionalEquipmentSummary__c</fullName>
    <description>CDM: Stores the equipment summary (optional).</description>
    <inlineHelpText>Optional Equipment Summary</inlineHelpText>
    <label>Optional Equipment Summary</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>