force-app/main/default/objects/Asset/fields/DU_ParkDistanceControlExists__c.field-meta.xml
<CustomField>
    <fullName>DU_ParkDistanceControlExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of park distance control</description>
    <label>Existence of Park Distance Control</label>
    <type>Checkbox</type>
</CustomField>