force-app/main/default/objects/Asset/fields/DU_QuantityCylinder__c.field-meta.xml
<CustomField>
    <fullName>DU_QuantityCylinder__c</fullName>
    <description>CDM: Number of cylinders</description>
    <label>Number of Cylinders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>