force-app/main/default/objects/Asset/fields/DU_ReadyToDrive__c.field-meta.xml
<CustomField>
    <fullName>DU_ReadyToDrive__c</fullName>
    <description>CDM: Information whether the car is ready to drive</description>
    <label>Ready to Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>