force-app/main/default/objects/Asset/fields/DU_RearCameraExists__c.field-meta.xml
<CustomField>
    <fullName>DU_RearCameraExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of a rear camera</description>
    <label>Existence of Rear Camera</label>
    <type>Checkbox</type>
</CustomField>