force-app/main/default/objects/Asset/fields/DU_RecordOriginalSystem__c.field-meta.xml
<CustomField>
    <fullName>DU_RecordOriginalSystem__c</fullName>
    <description>CDM: Stores the name of the system the record is being sent from.</description>
    <label>Original System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>