force-app/main/default/objects/Asset/fields/DU_ReducedValueTotal__c.field-meta.xml
<CustomField>
    <fullName>DU_ReducedValueTotal__c</fullName>
    <description>CDM: Reduced value of the vehicle</description>
    <label>Total amount of reduced value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>