force-app/main/default/objects/Asset/fields/DU_ResidualValue__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValue__c</fullName>
    <description>CDM: Stores the residual value of the vehicle.</description>
    <label>Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>