force-app/main/default/objects/Asset/fields/DU_RimType__c.field-meta.xml
<CustomField>
    <fullName>DU_RimType__c</fullName>
    <description>CDM: Rim type</description>
    <label>Rim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alu</fullName>
            </value>
            <value>
                <fullName>NoRim</fullName>
                <label>No Rim</label>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>SteelWithWheelTrimCap</fullName>
                <label>Steel with Wheel Trim Cap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>