force-app/main/default/objects/Asset/fields/DU_SalesGroupKey__c.field-meta.xml
<CustomField>
    <fullName>DU_SalesGroupKey__c</fullName>
    <description>CDM: Field to store data for webCalc Sales Group Key</description>
    <label>Sales Group Key</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>