force-app/main/default/objects/Asset/fields/DU_Seats__c.field-meta.xml
<CustomField>
    <fullName>DU_Seats__c</fullName>
    <description>CDM: Number of seats</description>
    <label>Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>