force-app/main/default/objects/Asset/fields/DU_Segment__c.field-meta.xml
<CustomField>
    <fullName>DU_Segment__c</fullName>
    <description>CDM: Stores the value of the segment.</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A0</fullName>
            </value>
            <value>
                <fullName>A00</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>