force-app/main/default/objects/Asset/fields/DU_SourceSystemID__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceSystemID__c</fullName>
    <description>CDM: Contains the ID of the source system of this record</description>
    <label>Source System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>