force-app/main/default/objects/Asset/fields/DU_StationaryHeatingExists__c.field-meta.xml
<CustomField>
    <fullName>DU_StationaryHeatingExists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of a parking heater</description>
    <label>Existence of Stationary Heating</label>
    <type>Checkbox</type>
</CustomField>