force-app/main/default/objects/Asset/fields/DU_SteeringArrangement__c.field-meta.xml
<CustomField>
    <fullName>DU_SteeringArrangement__c</fullName>
    <description>CDM: Specification of the steering wheel placement</description>
    <label>Steering Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left-Hand Drive</fullName>
                <default>true</default>
                <label>Left-Hand Drive</label>
            </value>
            <value>
                <fullName>Right-Hand Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>