force-app/main/default/objects/Asset/fields/DU_SunroofExists__c.field-meta.xml
<CustomField>
    <fullName>DU_SunroofExists__c</fullName>
    <description>CDM: Availability of a sunroof</description>
    <label>Existence of Sunroof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>