force-app/main/default/objects/Asset/fields/DU_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>DU_TotalPrice__c</fullName>
    <description>CDM: Stores the total price of the vehicle.</description>
    <label>Net Model List Price (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>